--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,10 +3,20 @@
   box-sizing: border-box;
   padding: 2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
   text-decoration: underline;
   font-size: 2rem;
+}
+
+.widget-info {
+  display: flex;
+  margin: 2rem;
+}
+
+.widget-info > * {
+  margin: 0.5rem;
 }
