--- a/src/css/app.css
+++ b/src/css/app.css
@@ -29,7 +29,7 @@
   border-radius: 1rem;
   border: 1px solid #eee;
   box-shadow: rgb(199, 199, 199) 2px 4px;
-  transition: background-color 0.4s;
+  transition: background-color 0.4s, color 0.4s, border 0.4s;
 }
 
 .btn:active {
@@ -42,5 +42,7 @@
 }
 
 .enabled {
-  background-color: rgb(207, 245, 226);
+  border: 1px solid rgb(22, 114, 68);
+  background-color: rgb(22, 114, 68);
+  color: white;
 }
