--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -12,6 +12,7 @@
   overflow: hidden;
   box-shadow: 0 0 10px 2px #eee;
 }
+
 .popup-header {
   font-size: 1rem;
   display: flex;
@@ -30,4 +31,24 @@
 .open {
   transform: translateY(0%);
   opacity: 1;
+}
+
+.close-button {
+  height: 1rem;
+  width: 1rem;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  right: 0;
+  margin-right: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.close-icon {
+  width: 75%;
+  height: 2px;
+  background-color: white;
 }
