--- a/src/css/topBanner.css
+++ b/src/css/topBanner.css
@@ -8,5 +8,17 @@
   margin: 0;
   padding: 1rem;
   display: flex;
+  align-items: center;
   justify-content: space-around;
+}
+
+.top-banner-close-btn {
+  z-index: 10;
+  height: 1.5rem;
+  width: 1.5rem;
+  position: fixed;
+  right: 0;
+  background-color: transparent;
+  margin-right: 0.75rem;
+  border: 1px solid white;
 }
