--- a/src/css/topBanner.css
+++ b/src/css/topBanner.css
@@ -22,3 +22,18 @@
   margin-right: 0.75rem;
   border: 1px solid white;
 }
+
+.cross-line {
+  background-color: white;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: 0;
+}
+
+.cross-line:first-child {
+  transform: rotate(45deg);
+}
+.cross-line:last-child {
+  transform: rotate(-45deg);
+}
