--- a/src/css/bottomRightPopup.css
+++ b/src/css/bottomRightPopup.css
@@ -1,4 +1,4 @@
-.popup {
+.bottom-right-popup {
   position: fixed;
   right: 0;
   bottom: 0;
@@ -13,7 +13,7 @@
   box-shadow: 0 0 10px 2px #eee;
 }
 
-.popup-header {
+.bottom-right-popup > .header {
   font-size: 1rem;
   display: flex;
   justify-content: center;
@@ -22,18 +22,18 @@
   padding: 1rem;
 }
 
-.popup-body {
+.bottom-right-popup > .body {
   font-size: 1rem;
   padding: 2rem;
   line-height: 1.5rem;
 }
 
-.open {
+.bottom-right-popup.open {
   transform: translateY(0%);
   opacity: 1;
 }
 
-.close-button {
+.bottom-right-popup > .header > .close-button {
   height: 1rem;
   width: 1rem;
   background-color: transparent;
@@ -47,7 +47,7 @@
   padding: 0;
 }
 
-.close-icon {
+.bottom-right-popup > .header > .close-button > .close-icon {
   width: 75%;
   height: 2px;
   background-color: white;
