--- a/src/css/bottomRightPopup.css
+++ b/src/css/bottomRightPopup.css
@@ -1,54 +1,21 @@
-.bottom-right-popup {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  margin: 2rem;
-  opacity: 0;
-  transform: translateY(100%);
-  opacity: 0;
-  transition: 0.5s ease-out;
-  width: 14rem;
-  border-radius: 10px;
+.bottom-right-popup-container {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -10;
   overflow: hidden;
-  box-shadow: 0 0 10px 2px #eee;
+  margin: 0;
+  z-index: -5;
 }
 
-.bottom-right-popup > .header {
-  font-size: 1rem;
-  display: flex;
-  justify-content: center;
-  background-color: rgb(58, 12, 58);
-  color: white;
-  padding: 1rem;
+.bottom-right-popup-container.open {
+  z-index: 5;
 }
 
-.bottom-right-popup > .body {
-  font-size: 1rem;
-  padding: 2rem;
-  line-height: 1.5rem;
-}
-
-.bottom-right-popup.open {
-  transform: translateY(0%);
-  opacity: 1;
-}
-
-.bottom-right-popup > .header > .close-button {
-  height: 1rem;
-  width: 1rem;
-  background-color: transparent;
-  border: none;
+.bottom-right-popup-container > * {
   position: absolute;
   right: 0;
-  margin-right: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-}
-
-.bottom-right-popup > .header > .close-button > .close-icon {
-  width: 75%;
-  height: 2px;
-  background-color: white;
+  bottom: 0;
 }
