--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -6,6 +6,7 @@
   opacity: 0;
   transition: 0.5s ease-out;
   width: 14rem;
+  height: fit-content;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 0 10px 2px #eee;
