--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,4 +1,4 @@
-.bottom-right-popup {
+.popup {
   background-color: white;
   margin: 2rem;
   opacity: 0;
@@ -12,7 +12,7 @@
   box-shadow: 0 0 10px 2px #eee;
 }
 
-.bottom-right-popup > .header {
+.popup > .header {
   font-size: 1rem;
   display: flex;
   justify-content: center;
@@ -21,18 +21,18 @@
   padding: 1rem;
 }
 
-.bottom-right-popup > .body {
+.popup > .body {
   font-size: 1rem;
   padding: 2rem;
   line-height: 1.5rem;
 }
 
-.bottom-right-popup.open {
+.popup.open {
   transform: translateY(0%);
   opacity: 1;
 }
 
-.bottom-right-popup > .header > .close-button {
+.popup > .header > .close-button {
   height: 1rem;
   width: 1rem;
   background-color: transparent;
@@ -46,7 +46,7 @@
   padding: 0;
 }
 
-.bottom-right-popup > .header > .close-button > .close-icon {
+.popup > .header > .close-button > .close-icon {
   width: 75%;
   height: 2px;
   background-color: white;
