--- a/src/css/overlayPopup.css
+++ b/src/css/overlayPopup.css
@@ -14,6 +14,10 @@
   transition: background-color 0.5s ease-out, z-index 0s 0.5s;
 }
 
+.overlay-popup-container > * {
+  box-shadow: none;
+}
+
 .overlay-popup-container.open {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 5;
