--- a/src/css/toggleButton.css
+++ b/src/css/toggleButton.css
@@ -7,7 +7,15 @@
   background-color: lightblue;
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.toggle-circle-container {
   position: relative;
+  display: flex;
+  align-items: center;
+  width: 90%;
+  height: 90%;
 }
 
 .toggle-circle {
@@ -15,7 +23,6 @@
   left: 0;
   background-color: white;
   width: 50%;
-  z-index: 10;
   border-radius: 100%;
   height: 100%;
   transition: 0.25s ease-in-out;
