--- a/src/css/topBanner.css
+++ b/src/css/topBanner.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   color: white;
-  background-color: rgb(194, 112, 11);
+  background-color: var(--banner-color);
   margin: 0;
   padding: 1rem;
   display: flex;
