Working dark mode

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,10 +1,9 @@
 .popup {
   background-color: var(--background-color);
   margin: 2rem;
-  opacity: 0;
   transform: translateY(100%);
   opacity: 0;
-  transition: 0.5s ease-out;
+  transition: 0.5s ease-out, color 0s;
   width: 14rem;
   height: fit-content;
   border-radius: 10px;
@@ -17,6 +16,7 @@
   display: flex;
   justify-content: center;
   background-color: var(--popup-header-color);
+  transition: 0.5s ease-out;
   color: white;
   padding: 1rem;
 }
