--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,16 +1,24 @@
 .page {
+  min-height: 100vh;
   width: 100vw;
   box-sizing: border-box;
   padding: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: 0.5s ease-out;
 }
 
 .title {
   text-decoration: underline;
   font-size: 2rem;
   margin: 2rem;
+}
+
+.darktheme-label {
+  margin: 0.5rem;
 }
 
 .widget-info {
