--- a/src/css/bottomRightPopup.css
+++ b/src/css/bottomRightPopup.css
@@ -8,8 +8,10 @@
   overflow: hidden;
   margin: 0;
   z-index: -5;
+  transition: background-color 0.5s ease-out, z-index 0s 0.5s;
 }
 
 .bottom-right-popup-container.open {
   z-index: 5;
+  transition: background-color 0.5s ease-out, z-index 0s 0s;
 }
