Added sezzle logo and title

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -17,6 +17,12 @@
   margin: 2rem;
 }
 
+.logo {
+  margin-bottom: 2rem;
+  width: 5rem;
+  height: 5rem;
+}
+
 .darktheme-label {
   margin: 0.5rem;
 }
