--- a/src/css/containers.css
+++ b/src/css/containers.css
@@ -1,9 +1,7 @@
-.chatbot-container {
+.corner-container {
   width: fit-content;
   height: fit-content;
   position: absolute;
-  bottom: 0;
-  left: 0;
   z-index: -10;
   overflow: hidden;
   margin: 0;
@@ -11,7 +9,17 @@
   transition: background-color 0.5s ease-out, z-index 0s 0.5s;
 }
 
-.chatbot-container.open {
+.corner-container.open {
   z-index: 5;
   transition: background-color 0.5s ease-out, z-index 0s 0s;
+}
+
+.bottom-left {
+  bottom: 0;
+  left: 0;
+}
+
+.bottom-right {
+  bottom: 0;
+  right: 0;
 }
