--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -25,6 +25,10 @@
   font-size: 1rem;
   padding: 2rem;
   line-height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .popup.open {
