--- a/src/css/app.css
+++ b/src/css/app.css
@@ -28,13 +28,11 @@
 }
 
 .widget-info {
-  display: flex;
+  display: grid;
+  grid-template-columns: 10rem 1fr;
+  grid-gap: 1.4rem;
   align-items: center;
-  margin: 1rem;
-}
-
-.widget-info > * {
-  margin: 0.5rem;
+  margin: 2rem;
 }
 
 .btn {
