--- a/src/css/chatbot.css
+++ b/src/css/chatbot.css
@@ -41,6 +41,8 @@
   background-color: transparent;
   border: 2px solid #666;
   cursor: pointer;
+  color: var(--text-color);
+  transition: 0.5s ease-out;
 }
 
 .reset-btn {
