Countdown pulses at last 30 secs

--- a/src/css/timerPopup.css
+++ b/src/css/timerPopup.css
@@ -15,3 +15,16 @@
 .final {
   color: red;
 }
+
+.very-last {
+  animation: pulse 0.66s infinite linear alternate;
+}
+
+@keyframes pulse {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.3);
+  }
+}
