--- a/src/css/timerPopup.css
+++ b/src/css/timerPopup.css
@@ -20,6 +20,36 @@
   animation: pulse 0.66s infinite linear alternate;
 }
 
+.signup-button {
+  margin: 1.5rem;
+  font-size: 1.2rem;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  background-color: hsl(90, 70%, 45%);
+  border: 2px solid hsl(90, 70%, 40%);
+  box-shadow: 5px 5px 0px 1px hsl(90, 70%, 38%);
+  color: white;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.signup-button:hover {
+  transform: translateY(-0.5rem);
+  border-radius: 1rem;
+}
+
+.signup-button:active {
+  transition: transform 0.15s ease-out;
+  transform: translateY(0.5rem);
+  border-radius: 1rem;
+}
+
+.signup-button:focus {
+  outline: 0;
+  box-shadow: 0 0 0 5px rgb(76, 154, 190);
+}
+
 @keyframes pulse {
   from {
     transform: scale(1);
