--- a/src/css/chatbot.css
+++ b/src/css/chatbot.css
@@ -61,3 +61,11 @@
 .reset-btn {
   margin: 2rem 0 0 0;
 }
+
+@media screen and (max-device-width: 480px) {
+  .chatbot {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+  }
+}
