--- a/src/css/dial.css
+++ b/src/css/dial.css
@@ -15,14 +15,14 @@
   background-color: #777;
   border: 0.2rem solid #444;
   border-radius: 100%;
-  animation: orbit 1s linear infinite;
+  animation: orbit 1s linear infinite alternate;
 }
 
 @keyframes orbit {
   from {
-    transform: rotate(0deg) translateX(20px) rotate(0deg);
+    transform: rotate(0deg) translateY(100%) rotate(0deg);
   }
   to {
-    transform: rotate(360deg) translateX(20px) rotate(-360deg);
+    transform: rotate(360deg) translateY(100%) rotate(-360deg);
   }
 }
