--- a/src/css/dial.css
+++ b/src/css/dial.css
@@ -1,28 +1,13 @@
 .dial {
-  background-color: #999;
+  background-color: rgb(175, 77, 77);
+  /* background-image: linear-gradient(-90deg, transparent 50%, white 50%),
+    linear-gradient(0deg, white 50%, transparent 50%); */
   height: 3.5rem;
   width: 3.5rem;
-  border: 0.4rem solid #888;
+  border: 0.2rem solid #888;
   border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.dial-dot {
-  height: 20%;
-  width: 20%;
-  background-color: #777;
-  border: 0.2rem solid #444;
-  border-radius: 100%;
-  animation: orbit 1s linear infinite alternate;
-}
-
-@keyframes orbit {
-  from {
-    transform: rotate(0deg) translateY(100%) rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg) translateY(100%) rotate(-360deg);
-  }
+  cursor: pointer;
 }
