--- a/src/css/titleTray.css
+++ b/src/css/titleTray.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-around;
   user-select: none;
+  margin: 3rem;
 }
 
 .title-tray > * {
@@ -23,5 +24,6 @@
 }
 
 .darktheme-label {
+  text-align: center;
   margin: 0.5rem;
 }
