--- a/src/css/overlayPopup.css
+++ b/src/css/overlayPopup.css
@@ -1,9 +1,9 @@
 .overlay-popup-container {
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
+  position: fixed;
   left: 0;
+  right: 0;
   top: 0;
+  bottom: 0;
   overflow: hidden;
   margin: 0;
   display: flex;
