--- a/src/css/app.css
+++ b/src/css/app.css
@@ -49,3 +49,15 @@
   background-color: rgb(22, 114, 68);
   color: white;
 }
+
+@media screen and (max-device-width: 480px) {
+  .title {
+    margin: 2rem;
+  }
+  .widget-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
