--- a/src/css/containers.css
+++ b/src/css/containers.css
@@ -1,7 +1,7 @@
 .corner-container {
   width: fit-content;
   height: fit-content;
-  position: absolute;
+  position: fixed;
   z-index: -10;
   overflow: hidden;
   margin: 0;
