--- a/src/css/topBanner.css
+++ b/src/css/topBanner.css
@@ -7,9 +7,10 @@
   background-color: var(--banner-color);
   margin: 0;
   padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr repeat(2, auto) 1fr;
+  grid-column-gap: 10vw;
+  justify-items: center;
   transform: translateY(-100%);
   opacity: 0;
   transition: transform 0.5s ease-out, opacity 0.5s ease-out;
@@ -25,8 +26,7 @@
   z-index: 10;
   height: 1.5rem;
   width: 1.5rem;
-  position: fixed;
-  right: 0;
+  position: relative;
   background-color: transparent;
   margin-right: 0.75rem;
   border: 1px solid white;
@@ -49,4 +49,10 @@
 
 a {
   color: white;
+}
+.top-banner > *:first-child {
+  grid-column-start: 2;
+}
+.top-banner > *:last-child {
+  margin-left: auto;
 }
