--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,7 +15,7 @@
   text-align: center;
   text-decoration: underline;
   font-size: 2rem;
-  margin: 6rem 0 2rem 0;
+  margin: 10vh 0 2rem 0;
 }
 
 .widget-info {
