--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -50,6 +50,7 @@
   align-items: center;
   justify-content: center;
   padding: 0;
+  cursor: pointer;
 }
 
 .popup > .header > .close-button > .close-icon {
